# Scripting

./: .gitignore  index.html
Transcribe/: CLAUDE.md  pyproject.toml  transcribe.py
Transcribe/transcriptions/: 1. L'IA, ça vous parle ？ [UdUB42wLu1M].txt  Brice Partouche  Founder of Satisfy Running.txt  Entretien avec Jean-Claude Milner ： La destitution du peuple.txt  Inside Claude Code With Its Creator Boris Cherny.txt  Inside SATISFY’s Brand + Content Strategy.txt  Michael Versteeg | Cocodona 250 Recap, Reflections On The Soul Of Ultrarunning.txt  Michael Versteeg | Reflections On The Soul Of Ultrarunning, Pt 2 (UTMB Edition).txt  On the Ledger X Friends With Benefits Episode 5- Brice Partouche.txt  Ramos-Saddles.txt  Saddles 100, Satisfy Running, and the state of ultra running with Michael Versteeg.txt  The Drop Podcast E81 | Brice Partouche, Satisfy Running Founder.txt  This was an incredible, seemingly impromptu, moment on what has become the best studio show in sports. Bravo to all involved..txt  Trail Running Luxury with SATISFY RUNNING founder, Brice Partouche.txt  WINNER of the Cocodona 250 -- Michael Versteeg.txt  [1hr Talk] Intro to Large Language Models.txt  versteeg-poddcats.txt
dot-org/: fetch_rolex_jss_state.py  pyproject.toml
dot-org/data/: convert_json_to_md.py
dot-org/data/www.rolex.org/: cookie-policy.json  de.json  el.json  es.json  fr.json  index.json  it.json  ja.json  ko.json  perpetual.json  pt-br.json  science.json  search.json  (+2 more)
dot-org/data/www.rolex.org.en/: arts.json  privacy-notice.json  rolex-mentor-protege.json  terms-of-use.json
(+12705 files in other folders)
